--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Embedded new times roman font so it can always be used on the website -->
     <link
       href="https://fonts.cdnfonts.com/css/roman-new-times"
       rel="stylesheet"
     />
-    <!-- Embedded new times roman font so it can always be used on the website -->
+    <link rel="icon" href="img/Maunga_Club_white.png" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/slideshow.css" />
 
     <title>Maunga Club - Main Page</title>
   </head>
-  <body style="background: #f9f9f9; font-family: 'Open Sans'" class="body">
+  <body
+    style="background: #f9f9f9; font-family: 'roman-new-times'"
+    class="body"
+  >
     <div id="navbar">
       <div
         style="
@@ -23,7 +28,7 @@
           align-items: center;
         "
       >
-        <img src="img/Maunga_Club_white.png" style="height: 8rem" />
+        <img src="img/Maunga_Club_white.png" style="height: 7vw" />
         <nav>
           <input
             type="button"
@@ -62,8 +67,8 @@
       class="parallax"
       style="
         background-image: linear-gradient(
-            rgba(0, 0, 0, 0.33),
-            rgba(0, 0, 0, 0.33)
+            rgba(0, 0, 0, 0.25),
+            rgba(0, 0, 0, 0.25)
           ),
           url(img/mountain_view_1.jpg);
         justify-content: center;
@@ -97,6 +102,11 @@
           <li>Maximum Children: 30</li>
         </ul>
       </div>
+      <button class="img_expand">
+        < <br />
+        < <br />
+        <
+      </button>
       <div class="image-container">
         <img
           src="img/kakapo/bunk_room.jpg"
@@ -123,6 +133,11 @@
           <li>Maximum Children: 15</li>
         </ul>
       </div>
+      <button class="img_expand">
+        < <br />
+        < <br />
+        <
+      </button>
       <div class="image-container">
         <img src="img/kereru/adult_bedroom.jpg" class="image2 fullscreen-img" />
         <img
@@ -145,6 +160,11 @@
           <li>Maximum Children: 4</li>
         </ul>
       </div>
+      <button class="img_expand">
+        < <br />
+        < <br />
+        <
+      </button>
       <div class="image-container">
         <img src="img/pukeko/adult_bedroom.jpg" class="image2 fullscreen-img" />
         <img src="img/pukeko/bathroom.jpg" class="image2 fullscreen-img" />
@@ -179,13 +199,32 @@
         <img src="img/pukeko/chalet_view.jpg" class="image fullscreen-img" />
       </div>
     </div>
+
+    <div style="padding: 14vh 0" id="Gallery">
+      <div class="carousel" style="background-color: rgba(255, 255, 255, 0.1)">
+        <button
+          class="carousel-button prev"
+          onclick="MoveSlides(-1); slideshow_autostop()"
+        >
+          &#60;
+        </button>
+        <button
+          class="carousel-button next"
+          onclick="MoveSlides(1); slideshow_autostop()"
+        >
+          &#62;
+        </button>
+        <img src="img/kakapo/bunk_room.jpg" id="images" class="images show" />
+      </div>
+    </div>
+
     <div
       id="fullpage"
-      onclick="this.style.display='none'; setDirection(1)"
+      onclick="this.style.display='none'; setDirection(1); html.style.overflowY='scroll'"
     ></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="js/triggerscroll.js" defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="js/script.js" defer></script>
   </body>
 </html>
